--- a/templates/roll/roll-collab-gm.hbs
+++ b/templates/roll/roll-collab-gm.hbs
@@ -1,6 +1,6 @@
 {{log "ROLL COLLAB GM CONTEXT" this}}
 
-<form class="{{cssClass}} roll-collab-sheet roll-collab-sheet-pc" autocomplete="off">
+<form class="{{cssClass}} roll-collab-sheet roll-collab-sheet-gm" autocomplete="off">
   <div class="sheet-root">
     {{#if (test rollType "==" "Action")}}
     {{> "systems/eunos-blades/templates/roll/partials/roll-collab-action-gm.hbs" }}
